<resources>
    <string name="app_name">vns</string>
    <string name="varanasi">Varanasi</string>
    <string name="introduction">Introduction</string>
    <string name="heading">Heading</string>
    <string name="its_a_picture_showing_ghats_of_varanasi">its a Picture showing Ghats of Varanasi</string>
    <string name="intro_vns">"Varanasi is one of the old and holy cities situated in the banks of the river Ganga for about three thousand years of history and civilization. The place has got other names like Kashi and Benaras or Banaras. Varanasi is described in several poetic adjectives like “The city of temples”, “The holy city of India”, “The religious capital of India”, “The city of learning” and “The cultural capital of India”. The name of the city Varanasi derived by two holy tributary rivers flowing into the River Ganga “Assi” and “Varuna”. Ganga River and their Ghats are one of the prominent must visit places in Varanasi; it is a stretch about 2.5 miles. It is the land of spirituality and origins of many religions, dharma and movements like Hinduism, Buddhism, Sikhism, Jainism, Bhakti Movement and many more. It is been told that Lord Shiva found and resided in the Varanasi city, thus in “Mahabharat” pandavas went to Kashi in search of Lord Shiva to atone the sins committed in the War of Kurukshetra. Varanasi has one of the famous twelve Jyotirlinga Visvanatha temples at the banks of the River Ganga. It is one of the seven holiest cities in India. Varanasi is the co-existing city of the past and present, eternity and continuousness. Shaivism and Vaishnaviam have cohabited in Varanasi cordially. It is also a place where Buddha first preached his sermon after enlightenment. Ayurveda is originated from Varanasi and has constructed a strong base for the modern medical sciences. Many philosophers and great personalities like Gautama Buddha, Lal Bahadur Shastri, Munshi Premchand, Ramanuja, Ravidas, Tulsi Das, Mahavira, Kabir, Patanjali, Rajan-Sajan Mishra and Jhansi Rani Lakshmi Bai took birth in this beautiful city.

Varanasi is one of the old luminous cities, which is also a successful industrial city, a place of knowledge, philosophy, education, culture, music and Indian traditional arts and crafts. Industries in fine silks, silver and gold is said to be famous and renowned in their unique and purity in work.
        \n Varanasi has the finest river frontage in India, with miles of ghats, or steps, for religious bathing; an array of shrines, temples, and palaces rises tier on tier from the water’s edge. The inner streets of the city are narrow, winding, and impassable for motor traffic; the newer outer suburbs are more spacious and are laid out more systematically. The sacred city is bounded by a road known as Panchakosi; devout Hindus hope to walk that road and visit the city once in a lifetime and, if possible, to die there in old age. The site receives more than a million pilgrims each year. In addition, thousands of domestic and foreign tourists flock to the city annually, and tourism-related activities constitute a significant component of the local economy."</string>
    <string name="memories">Memories</string>
    <string name="history_vns">History</string>
    <string name="place_to_visit_vns">Place to Visit</string>
    <string name="speciality_vns">Speciality</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="varanasi_history">History</string>
    <string name="history_varanasi_text1">Varanasi is one of the oldest continuously inhabited cities in the world. Its early history is that of the first Aryan settlement in the middle Ganges valley. By the 2nd millennium BCE, Varanasi was a seat of Aryan religion and philosophy and was also a commercial and industrial centre famous for its muslin and silk fabrics, perfumes, ivory works, and sculpture. Varanasi was the capital of the kingdom of Kashi during the time of the Buddha (6th century BCE), who gave his first sermon nearby at Sarnath. The city remained a centre of religious, educational, and artistic activities as attested by the celebrated Chinese Buddhist pilgrim Xuanzang, who visited it in about 635 CE and said that the city extended for about 3 miles (5 km) along the western bank of the Ganges.</string>
    <string name="kashi_viswanath">Kashi Viswanath</string>
    <string name="kashi_vishwanath_des">Kashi Vishwanath Temple is regarded as one of the most popular Hindu temple dedicated to Lord Shiva. Located in the heart of Varanasi, the temple is a core of faith for millions of Hindus.</string>
    <string name="dasha_text">As the name suggests, it is believed that this is the place where Lord Brahma performed the Dasa Ashwamedha sacrifice. This ghat is a religious spot and many rituals are performed here.</string>
    <string name="Assi_des">The Assi Ghat is placed at the confluence of the Rivers Assi and Ganga and is famous for the large Shiva Lingam installed under a peepal tree. It has immense religious importance and has been mentioned in the Puranas and in various legends as well.</string>
    <string name="bhu_des">Established by Madan Mohan Malviya in 1916, Banaras Hindu University is a 5.3 square kilometre campus in the city. It has about 30,000 students residing in the campus and is the largest residential university in the continent. The University has a long list of notable alumni and faculty. The Indo-Gothic architecture and the sprawling lawns add to the beauty of the place.</string>
    <string name="ramnagar_des">Located on the Eastern banks of River Ganga, opposite to Tulsi Ghat, Ramnagar Fort is a stunning historical monument in Varanasi. It was built by Raja Balwant Singh in 1750 according to the Mughal style of architecture. Even though the system of Kings was abolished in the region, the current Maharaja, Pelu Bhiru Singh, resides in the Fort.</string>
    <string name="Vindham_des">Vindham Waterfalls is a gorgeous waterfalls in MIrzapur, 90 kms from Varanasi. The waterfalls are also in close proximity of other popular tourist attractions like Tanda fountains, caves and temples. The mesmerising waterfall is a famous picnic spot and attracts a large tourist influx.</string>
    <string name="lakhaniya_des">Lakhaniya Dari Waterfall is situated at a distance of around 48 kms from Varanasi in Latifpur in Varanasi. The waterfalls are a hidden gem away from the din and chaos of the city. Especially popular among trekkers and adventure enthusiasts, the falls can be reached through a small trek in the hills.</string>
    <string name="dashaswamedh_ghat">Dashaswamedh Ghat</string>
    <string name="assi_ghat">Assi Ghat</string>
    <string name="bhu">BHU</string>
    <string name="ramnagar_fort">Ramnagar Fort</string>
    <string name="vindham_fall">Vindham Fall</string>
    <string name="lakhaniya_dari">Lakhaniya Dari</string>
    <string name="speciality">Speciality</string>
    <string name="place_to_visit">Place To Visit</string>
    <string name="ganga_arti">Ganga Arti</string>
    <string name="exploreGhat">Explore Temple</string>
    <string name="boatRide">Boat Ride</string>
    <string name="strollGhats">Stroll Along The Ghats</string>
    <string name="sarnath">Sightseeing tour at Sarnath</string>
    <string name="localMarket">Local Market</string>
    <string name="ganga_text">Watching Evening Aarti Ceremony is certainly once in a lifetime experience. The spectacular event must be viewed from the Dasawamedh Ghat, where beautiful rituals unfold themselves in front of your eyes. Brass lamps of large sizes are used during this event, which is accompanied by chants and crowds of people waiting to pray.  Visit at least an hour before the Aarti if you want to gather the experience at its best. At this time, you can witness how five elevated planks are placed at the edge of the steps of the Ghats and brass lamps are cleaned and readied for the occasion.  It is also interesting to watch how priests don identical dhotis and kurta for prayer and Aarti ceremony. Those who wish to click pictures from their cameras should visit the Ghats in evening boats, as this will allow one to easily capture everything in attention.  These brass lamps are quite heavy, almost four and half kilograms in weight. Therefore, make sure you carry one only if you are able to hold it in the crowds. As soon as they are lit, spectacular images are formed. The night sky shines with radiance of these lamps while incense sticks will fill the atmosphere with aroma of different types. The Aarti ceremony is performed every night and a 45 minute ritual is held for the same. The usual time it is 6: 45 in the evening.</string>
    <string name="exploreText">Best known for its Ghats and Temples, a visit to Varanasi is incomplete without the best temples of this city. There is one on almost every road and road crossing in Varanasi. While the small temples are used for daily local prayers and rituals, larger ones are associated with Hindu history and mythology. These places of worships are regularly visited by travellers in large numbers. They also reflect the architecture in India.  The most popular temple here is the Kashi Vishwanath Temple. Also called the Golden Temple, this place of interest was built in 1780 by Queen Ahilyabai Holker of Indore. The Vishwanath or the Jyotirlinga of Lord Shiva is enshrined in here. The place of worship is also popular because Sikh Maharaja Ranjit Singh donated huge amounts of gold. Using the same gold, two domes of temples were constructed.  Durga Temple, built during the 18th century is also a popular in this city. According to legends, the statue of Goddess Durga in here was made by the Goddess herself. Every year, devotees visit this revered place during auspicious occasions, particularly Navratri.  It is popular among architecture students who visit it to see the Nagara Style of architecture, wherein the temple is layered in multi-tiered spires and has a rectangular tank of water. Among other shrines, Baba Keenaram Sthal, is regularly visited by researchers, tourists, documentary makers and writers.</string>
    <string name="history_text">"Varanasi subsequently declined during three centuries of Muslim occupation, beginning in 1194. Many of the city’s Hindu temples were destroyed during the period of Muslim rule, and learned scholars fled to other parts of the country. The Mughal emperor Akbar in the 16th century brought some relief to the city’s religious and cultural activities. There was another setback during the reign of the Mughal emperor Aurangzeb in the late 17th century, but later the Marathas sponsored a new revival. Varanasi became an independent kingdom in the 18th century, and under subsequent British rule it remained a commercial and religious centre.\n In 1910 the British made Varanasi a new Indian state, with Ramnagar (on the opposite bank) as headquarters but with no jurisdiction over the city of Varanasi. In 1947, after Indian independence, the Varanasi state became part of the state of Uttar Pradesh. "</string>
</resources>