<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">


    <TextView
        android:id="@+id/textView"
        style="@style/Heading"
        android:text="@string/varanasi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_top"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:paddingBottom="0dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="right">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/varanasi_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:lineSpacingExtra="8sp"
                android:paddingStart="@dimen/pad_left"
                android:paddingTop="@dimen/small_pad"
                android:paddingEnd="@dimen/pad_right"
                android:text="@string/varanasi_history"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/intro_wall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/introduction"
                android:cropToPadding="false"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/vns_history1" />

            <TextView
                android:id="@+id/vns_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/introduction"
                android:fontFamily="casual"
                android:paddingStart="@dimen/pad_left"
                android:paddingEnd="@dimen/pad_right"
                android:text="@string/history_varanasi_text1"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/kashi_vishwanath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/introduction"
                android:cropToPadding="false"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/vns_history" />

            <TextView
                android:id="@+id/kashi_viswanath_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/introduction"
                android:fontFamily="casual"
                android:paddingStart="@dimen/pad_left"
                android:paddingEnd="@dimen/pad_right"
                android:text="@string/history_text"
                android:textAlignment="textStart"
                android:textSize="16sp" />




        </LinearLayout>




    </ScrollView>





</LinearLayout>